--- a/protos/buf.gen.yaml
+++ b/protos/buf.gen.yaml
@@ -5,17 +5,17 @@ inputs:
     include_package_files: false
 plugins:
   - local: protoc-gen-go
-    out: gen/go/pkg/egate-proto
+    out: ../gen/go/pkg/egate-proto
     opt: 
       - paths=import
       - module=enda/pkg/egate-proto
     include_imports: true
 
   - local: protoc-gen-nanopb
-    out: gen/nanopb
+    out: ../gen/nanopb
     opt: field_name_type=camel,omit_message_names,omit_enum_names,omit_enum_prefixes
     include_imports: false
 
   - local: protoc-gen-ts_proto
-    out: gen/ts
+    out: ../gen/ts
     opt: esModuleInterop=true,oneof=unions
